js/src/tests/test262/built-ins/Error/prototype/stack/setter-non-error-receiver.js




















var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;


var plain = {};
set.call(plain, 'plain');
verifyProperty(plain, 'stack', {
  value: 'plain',
  writable: true,
  enumerable: true,
  configurable: true,
});


var arr = [];
set.call(arr, 'array');
verifyProperty(arr, 'stack', {
  value: 'array',
  writable: true,
  enumerable: true,
  configurable: true,
});


var fn = function () {};
set.call(fn, 'function');
verifyProperty(fn, 'stack', {
  value: 'function',
  writable: true,
  enumerable: true,
  configurable: true,
});


var fakeError = Object.create(Error.prototype);
set.call(fakeError, 'fake');
verifyProperty(fakeError, 'stack', {
  value: 'fake',
  writable: true,
  enumerable: true,
  configurable: true,
});

reportCompare(0, 0);
